@@ -39,4 +39,6 @@
 #define __NR_fsmount		432
 #define __NR_fspick		433
 
+#define __NR_faccessat2		439
+
 #endif
